--- a/MediumMenu.xcodeproj/xcshareddata/xcschemes/MediumMenu-SampleTests.xcscheme
+++ b/MediumMenu.xcodeproj/xcshareddata/xcschemes/MediumMenu-SampleTests.xcscheme
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF08F3C21AD8CE0700A5FECD"
-               BuildableName = "MediumMenu.framework"
-               BlueprintName = "MediumMenu"
-               ReferencedContainer = "container:MediumMenu-Sample.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -28,6 +12,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6E3420BB1D9FAC6B0009371F"
+               BuildableName = "MediumMenu-SampleTests.xctest"
+               BlueprintName = "MediumMenu-SampleTests"
+               ReferencedContainer = "container:MediumMenu.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -42,15 +36,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF08F3C21AD8CE0700A5FECD"
-            BuildableName = "MediumMenu.framework"
-            BlueprintName = "MediumMenu"
-            ReferencedContainer = "container:MediumMenu-Sample.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +45,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF08F3C21AD8CE0700A5FECD"
-            BuildableName = "MediumMenu.framework"
-            BlueprintName = "MediumMenu"
-            ReferencedContainer = "container:MediumMenu-Sample.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
